FIX overflow on markdown code block

--- a/client/src/styling/index.css
+++ b/client/src/styling/index.css
@@ -1,4 +1,5 @@
 .markdown-container pre {
+  overflow-x: scroll;
   background-color: #0d1117;
   color: aliceblue;
   padding: 5px;
